salesforce_sfdx_QA/main/default/objects/Sundry_Code__c/fields/Sundry_Code__c.field-meta.xml
<CustomField>
    <fullName>Sundry_Code__c</fullName>
    <description>ORACLE</description>
    <label>Sundry Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>