salesforce_sfdx_QA/main/default/objects/Sundry_Code__c/fields/Sundry_Description__c.field-meta.xml
<CustomField>
    <fullName>Sundry_Description__c</fullName>
    <description>ORACLE</description>
    <label>Sundry Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Rebates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>