salesforce_sfdx_QA/main/default/objects/Sundry_Code__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <description>ORACLE</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>